# py-parser

./: excluded_words.txt  main.py  pyproject.toml  todo.md  urls.txt
classes/: AllSeo.py  ChoiceSitemapOrPage.py  Clipboard.py  Diet.py  Domain.py  FileAction.py  HttpClient.py  MenuAction.py  PathHelper.py  Sitemap.py  SpellCheck.py  Utils.py
modules/: all_seo.py  diet.py  duplicate_ids.py  empty_links.py  external_links.py  get_seo.py  get_soup_after_download.py  get_url.py  hash_links.py  have_lorem.py  images_has_alt.py  index.py  main_menu.py  phone_watsapp.py  spell_check.py  spell_check_func.py
my_types/: TChoice.py
