[project]
name = "py-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "beautifulsoup4>=4.13.5",
    "fake-useragent>=2.2.0",
    "flake8>=7.3.0",
    "lxml>=6.0.2",
    "mypy>=1.18.2",
    "requests>=2.32.5",
]
