[project]
name = "py-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "beautifulsoup4>=4.13.5",
    "fake-useragent>=2.2.0",
    "flake8>=7.3.0",
    "hunspell>=0.5.5",
    "language-tool-python>=2.9.4",
    "lxml>=6.0.2",
    "mypy>=1.18.2",
    "pyperclip>=1.10.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "simple-term-menu>=1.6.6",
]
